feat(watch): created clients that connect to gRPC stream.
Closes #4
