# pkg/api/gostream/v1/gostream.pb.gw.go
@@ -31,6 +31,42 @@ var _ = runtime.String
 var _ = utilities.NewDoubleArray
 var _ = metadata.Join
 
+var (
+	filter_WatchersService_Advertise_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_WatchersService_Advertise_0(ctx context.Context, marshaler runtime.Marshaler, client WatchersServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq AdvertiseRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_WatchersService_Advertise_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.Advertise(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_WatchersService_Advertise_0(ctx context.Context, marshaler runtime.Marshaler, server WatchersServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq AdvertiseRequest
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_WatchersService_Advertise_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.Advertise(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_PetService_CreatePet_0(ctx context.Context, marshaler runtime.Marshaler, client PetServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq CreatePetRequest
 	var metadata runtime.ServerMetadata
@@ -151,6 +187,40 @@ func local_request_PetService_ListPets_0(ctx context.Context, marshaler runtime.
 
 }
 
+// RegisterWatchersServiceHandlerServer registers the http handlers for service WatchersService to "mux".
+// UnaryRPC     :call WatchersServiceServer directly.
+// StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
+// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterWatchersServiceHandlerFromEndpoint instead.
+func RegisterWatchersServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server WatchersServiceServer) error {
+
+	mux.Handle("GET", pattern_WatchersService_Advertise_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/com.lordvidex.gostream.v1.WatchersService/Advertise", runtime.WithHTTPPathPattern("/watch/advertise"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_WatchersService_Advertise_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_WatchersService_Advertise_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	return nil
+}
+
 // RegisterPetServiceHandlerServer registers the http handlers for service PetService to "mux".
 // UnaryRPC     :call PetServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -234,6 +304,77 @@ func RegisterPetServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux,
 
 	return nil
 }
+
+// RegisterWatchersServiceHandlerFromEndpoint is same as RegisterWatchersServiceHandler but
+// automatically dials to "endpoint" and closes the connection when "ctx" gets done.
+func RegisterWatchersServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
+	conn, err := grpc.DialContext(ctx, endpoint, opts...)
+	if err != nil {
+		return err
+	}
+	defer func() {
+		if err != nil {
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+			return
+		}
+		go func() {
+			<-ctx.Done()
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+		}()
+	}()
+
+	return RegisterWatchersServiceHandler(ctx, mux, conn)
+}
+
+// RegisterWatchersServiceHandler registers the http handlers for service WatchersService to "mux".
+// The handlers forward requests to the grpc endpoint over "conn".
+func RegisterWatchersServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
+	return RegisterWatchersServiceHandlerClient(ctx, mux, NewWatchersServiceClient(conn))
+}
+
+// RegisterWatchersServiceHandlerClient registers the http handlers for service WatchersService
+// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "WatchersServiceClient".
+// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "WatchersServiceClient"
+// doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
+// "WatchersServiceClient" to call the correct interceptors.
+func RegisterWatchersServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client WatchersServiceClient) error {
+
+	mux.Handle("GET", pattern_WatchersService_Advertise_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/com.lordvidex.gostream.v1.WatchersService/Advertise", runtime.WithHTTPPathPattern("/watch/advertise"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_WatchersService_Advertise_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_WatchersService_Advertise_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	return nil
+}
+
+var (
+	pattern_WatchersService_Advertise_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"watch", "advertise"}, ""))
+)
+
+var (
+	forward_WatchersService_Advertise_0 = runtime.ForwardResponseMessage
+)
 
 // RegisterPetServiceHandlerFromEndpoint is same as RegisterPetServiceHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
